Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,13 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -34,6 +41,7 @@ body {
   width: 100%;
   touch-action: none;
   overflow: hidden;
+  position: fixed;
 }
 
 h1 {
